--- a/templates/navigation/menu--external-menu.html.twig
+++ b/templates/navigation/menu--external-menu.html.twig
@@ -18,6 +18,5 @@
  *   - in_active_trail: TRUE if the link is in the active trail.
  */
 #}
-{{ attach_library('hdbt/desktop-menu-toggle') }}
 
-{% embed "@hdbt/navigation/menu.html.twig" with {auto_open: false, allow_collabsible: true} %}{% endembed %}
+{% embed "@hdbt/navigation/menu.html.twig" with {auto_open: false, allow_collabsible: false} %}{% endembed %}
