--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -48,7 +48,13 @@
       {% endif %}
 
       {% if page.header_branding %}
-        {{ page.header_branding }}
+        {#
+          Render the header branding region without the external menu block.
+          External mega menu block will be rendered manually in external fallback menu.
+          See. block--external-fallback-menu.html.twig:61.
+        #}
+        {% set external_mega_menu_block = theme_prefix ~ '_external_menu_mega_menu' %}
+        {{ page.header_branding|without(external_mega_menu_block) }}
       {% endif %}
 
       {% if page.header_bottom %}
