UHF-6142: Fixed metadata icon and image placeholder icon

--- a/src/scss/06_components/_metadata-wrapper.scss
+++ b/src/scss/06_components/_metadata-wrapper.scss
@@ -32,6 +32,7 @@
   .hel-icon {
     height: $spacing-and-half;
     margin-right: $spacing-half;
+    min-width: $spacing-and-half;
     width: $spacing-and-half;
   }
 }
