--- a/templates/misc/image-placeholder.twig
+++ b/templates/misc/image-placeholder.twig
@@ -1,3 +1,3 @@
 <div class="image-placeholder">
-  {% include "@hdbt/misc/icon.twig" with {icon: image_placeholder } %}
+  {% include "@hdbt/misc/icon.twig" with {icon: image_placeholder } only %}
 </div>
