UHF-6203: Changed variable name to be more descriptive

--- a/templates/block/block--system-branding-block.html.twig
+++ b/templates/block/block--system-branding-block.html.twig
@@ -29,5 +29,5 @@
     'id': 'logo--header',
     'rel': 'home',
   } %}
-  {{ link(link_title, frontpage_url, link_attributes) }}
+  {{ link(link_title, frontpage_instance_url, link_attributes) }}
 {% endblock %}
