--- a/src/scss/06_components/navigation/_infinite-scroll-pager.scss
+++ b/src/scss/06_components/navigation/_infinite-scroll-pager.scss
@@ -1,5 +1,6 @@
 .infinite-scroll-pager {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   list-style: none;
   margin-left: 0;
@@ -7,6 +8,11 @@
   padding: 0;
 
   @include breakpoint($breakpoint-m) {
+    flex-direction: row;
     margin-top: $spacing-quadruple;
+  }
+
+  .pager-button {
+    display: flex;
   }
 }
