UHF-6038: Reverted naming convention for the external mega menu block.

--- a/templates/block/block--external-menu-block-fallback.html.twig
+++ b/templates/block/block--external-menu-block-fallback.html.twig
@@ -56,9 +56,8 @@
         <div class="mega-and-mobilemenu">
           {{ drupal_entity('block', 'language_switcher')}}
 
-          {# Construct external mega menu block based on active theme. #}
-          {% set external_mega_menu_block = 'external_menu_mega_menu_' ~ theme_prefix %}
-          {{ drupal_entity('block', external_mega_menu_block, check_access=false) }}
+          {# Render external mega menu block. #}
+          {{ drupal_entity('block', 'external_menu_mega_menu', check_access=false) }}
 
           {# The block content will render menu--external-menu--fallback.html.twig #}
           {{ block_content }}
