UHF-6038: Added global navigation checks to each external menu block.

--- a/templates/block/block--external-menu-block--footer-bottom-navigation.html.twig
+++ b/templates/block/block--external-menu-block--footer-bottom-navigation.html.twig
@@ -31,10 +31,14 @@
  * http://www.w3.org/TR/WCAG-TECHS/H42.html for more information.
  */
 #}
-{% set heading_id = attributes.id ~ '-menu'|clean_id %}
-<nav role="navigation" {{ attributes|without('role', 'aria-labelledby').addClass('footer-bottom__navigation') }}>
-  {# Menu. #}
-  {% block content %}
-    {{ content }}
-  {% endblock %}
-</nav>
+
+{# Render navigation with content from another instance "globally" #}
+{% if use_global_navigation %}
+  {% set heading_id = attributes.id ~ '-menu'|clean_id %}
+  <nav role="navigation" {{ attributes|without('role', 'aria-labelledby').addClass('footer-bottom__navigation') }}>
+    {# Menu. #}
+    {% block content %}
+      {{ content }}
+    {% endblock %}
+  </nav>
+{% endif %}
