--- a/templates/block/block--external-menu-block--header-language-links.html.twig
+++ b/templates/block/block--external-menu-block--header-language-links.html.twig
@@ -32,7 +32,7 @@
  */
 #}
 
-{# Do we want to render navigation with content from another instance "globally" #}
+{# Render navigation with content from another instance "globally" #}
 {% if use_global_navigation %}
   {# Todo: Hide until the UHF-6046 is in progress #}
   <!-- Header language links - menu block -->
@@ -41,5 +41,4 @@
   {#      {{ content }}#}
   {#    {% endblock %}#}
   {#  {% endset %}#}
-
 {% endif %}
