UHF-6041: Adds template for target group links paragraph

--- a/src/scss/06_components/paragraphs/__index.scss
+++ b/src/scss/06_components/paragraphs/__index.scss
@@ -19,5 +19,6 @@
 @import 'remote-video';
 @import 'service-list';
 @import 'sidebar-text';
+@import 'target-group-links';
 @import 'text';
 @import 'unit-search';
