--- a/templates/misc/tag-list.twig
+++ b/templates/misc/tag-list.twig
@@ -4,12 +4,12 @@
   {% set type_class = 'content-tags__tags--static' %}
 {% endif %}
 
- 
  <section class="content-tags"  aria-label="{{ 'Tags'|t({}, {'context': 'Label for screen reader software users explaining that this is a list of tags related to this page.'}) }}">
   <ul class="content-tags__tags {{ type_class }}">
     {% block content %}
       {% for tag in tags %}
         {% include '@hdbt/misc/tag.twig' with {
+          color: color,
           tag: tag
         }%}
       {% endfor %}
