--- a/templates/misc/tag.twig
+++ b/templates/misc/tag.twig
@@ -1,1 +1,8 @@
-<li class="content-tags__tags__tag">{{ tag }}</li>
+{% if color %}
+  {% set tag_color_class = 'content-tags__tags__tag--' ~ color %}
+{% else %}
+  {% set tag_color_class = 'content-tags__tags__tag--gray' %}
+{% endif %}
+
+
+<li class="content-tags__tags__tag {{ tag_color_class }}">{{ tag }}</li>
