--- a/src/scss/06_components/_tags.scss
+++ b/src/scss/06_components/_tags.scss
@@ -1,5 +1,5 @@
 $-tag-gap: $spacing-half;
-$-tag-static-padding: $spacing-quarter $spacing;
+$-tag-static-padding: $spacing-half $spacing;
 $-tag-interactive-padding: 10px 20px;
 
 .content-tags__tags {
@@ -21,8 +21,9 @@ $-tag-interactive-padding: 10px 20px;
 .content-tags__tags__tag a,
 .content-tags__tags__tag span,
 .content-tags__tags--static li {
-  @include font('small');
+  @include font('special.helper_text');
   display: inline-block;
+  line-height: 1;
   text-decoration: none;
   transition: 0.2s ease-in-out background-color, 0.2s ease-in-out border-color;
 }
@@ -54,7 +55,7 @@ $-tag-interactive-padding: 10px 20px;
   padding: $-tag-static-padding;
 }
 
-.content-tags__tags--static .content-tags__tags__tag--blue span {
+.content-tags__tags--static .content-tags__tags__tag--coat-of-arms span {
   background-color: $color-coat-of-arms-medium-light;
 }
 
@@ -62,6 +63,20 @@ $-tag-interactive-padding: 10px 20px;
   background-color: $color-gold-medium-light;
 }
 
-.content-tags__tags--static .content-tags__tags__tag--purple span {
+.content-tags__tags--static .content-tags__tags__tag--bus span {
   background-color: $color-bus-medium-light;
+}
+
+.content-tags__tags--static .content-tags__tags__tag--success span {
+  background-color: $color-success;
+  color: $color-white;
+}
+
+.content-tags__tags--static .content-tags__tags__tag--alert span {
+  background-color: $color-alert;
+}
+
+.content-tags__tags--static .content-tags__tags__tag--error span {
+  background-color: $color-error;
+  color: $color-white;
 }
