UHF-6509: Adjust static tag styles a bit more

--- a/src/scss/06_components/_tags.scss
+++ b/src/scss/06_components/_tags.scss
@@ -1,5 +1,5 @@
 $-tag-gap: $spacing-half;
-$-tag-static-padding: $spacing-half $spacing;
+$-tag-static-padding: $spacing-half $spacing 10px;
 $-tag-interactive-padding: $spacing 20px 18px;
 
 .content-tags__tags {
