UHF-6038: Hide fallback mobile menu in large breakpoint.

--- a/src/scss/06_components/navigation/global/_menu-toggle.scss
+++ b/src/scss/06_components/navigation/global/_menu-toggle.scss
@@ -29,6 +29,7 @@ $-menu-transition-duration: 0.3s;
 }
 
 .mega-and-mobilemenu .block--language-switcher,
+.mega-and-mobilemenu .mobile-menu-fallback,
 .mega-and-mobilemenu .mmenu__footer {
   @include breakpoint($breakpoint-l) {
     display: none;
