UHF-6356: Fix menu title font weight and paddings

--- a/src/scss/01_variables/_typography_variables.scss
+++ b/src/scss/01_variables/_typography_variables.scss
@@ -164,6 +164,11 @@ $config: deep-map-merge(
             font-weight: $font-weight-regular,
             line-height: 14 / 14,
           ),
+          mobile_header: (
+            font-size: remify(24px),
+            font-weight: $font-weight-regular,
+            line-height: 32 / 24,
+          ),
           main_nav: (
             font-size: remify(16px),
             font-weight: $font-weight-regular,
