UHF-6356: Move hiding of fallback mobile menu to css insted of js

--- a/src/scss/06_components/block/_language-switcher.scss
+++ b/src/scss/06_components/block/_language-switcher.scss
@@ -31,6 +31,10 @@
   }
 }
 
+#menu:not([data-js]) ~ * .mega-and-mobilemenu .block--language-switcher + * {
+  margin-top: $spacing;
+}
+
 .language-links {
   display: flex; // disables wrapping to multiple lines for now
 }
