--- a/src/scss/06_components/navigation/global/_mmenu.scss
+++ b/src/scss/06_components/navigation/global/_mmenu.scss
@@ -93,12 +93,15 @@ $-footerlink-target-size: 44px;
 .mmenu__language {
   background-color: $color-silver-light;
   border-bottom: 1px solid $-mmenu-border-color;
-  margin-bottom: $spacing;
   padding: 12px $spacing;
   position: relative;
 
   @include breakpoint($breakpoint-m) {
     display: none;
+  }
+
+  & + * {
+    margin-top: $spacing;
   }
 }
 
@@ -169,7 +172,6 @@ $-footerlink-target-size: 44px;
   align-items: center;
   display: flex;
   margin-bottom: 10px;
-  margin-top: 2px;
   min-height: 50px; // 40px like above, but add 2*5px to handle focus ring and stay same size as above element
   padding: 5px 12px; // Top and bottom paddings are for handling focus ring 3px width + 2px offset
 
