--- a/src/scss/02_mixins/__index.scss
+++ b/src/scss/02_mixins/__index.scss
@@ -2,5 +2,6 @@
 @import 'color_helpers';
 @import 'component_mixins';
 @import 'link_mixins';
+@import 'tags_mixins';
 @import 'typography_mixins';
 @import 'mixins';
