--- a/src/scss/06_components/_tags.scss
+++ b/src/scss/06_components/_tags.scss
@@ -1,58 +1,23 @@
-$-tag-gap: $spacing-half;
-$-tag-static-padding: $spacing-half $spacing 10px;
-$-tag-interactive-padding: $spacing 20px 18px;
-
 .content-tags__tags {
-  @include flex-gap($-tag-gap);
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin-bottom: 0;
-  margin-top: 0;
-  padding-left: 0;
+  @include tag-container;
 }
 
 .content-tags__tags__tag {
-  list-style: none;
-  margin-bottom: $-tag-gap;
-  margin-top: 0;
+  @include tag-parent;
 }
 
 .content-tags__tags__tag a,
 .content-tags__tags__tag span,
 .content-tags__tags--static li {
-  @include font('special.helper_text');
-  display: inline-block;
-  line-height: 1;
-  text-decoration: none;
-  transition: 0.2s ease-in-out background-color, 0.2s ease-in-out border-color;
+  @include tag('base');
 }
 
 .content-tags__tags--interactive a {
-  background-color: transparent;
-  border: 2px solid $color-black;
-  border-radius: $spacing-triple;
-  padding: $-tag-interactive-padding;
-
-  &:hover,
-  &:active {
-    background-color: $color-black;
-    border-color: $color-black;
-    color: $color-white;
-  }
-
-  &:focus,
-  &:active {
-    border-color: $color-black;
-    outline: 2px solid $color-black;
-    outline-offset: 2px;
-  }
+  @include tag('interactive');
 }
 
 .content-tags__tags--static span {
-  background-color: $color-silver;
-  border-radius: $spacing;
-  padding: $-tag-static-padding;
+  @include tag('static');
 }
 
 .content-tags__tags--static .content-tags__tags__tag--coat-of-arms span {
